SEGV in DwarfParser::process_dwarf after JDK-8234624

XMLWordPrintable

    • 15
    • b17
    • Verified

      Test: serviceability/sa/ClhsdbPstack.java

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x00007f4cf04938d4, pid=13811, tid=13813
      #
      # JRE version: Java(TM) SE Runtime Environment (15.0+15) (fastdebug build 15-ea+15-564)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 15-ea+15-564, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # C [libsaproc.so+0x48d4] DwarfParser::process_dwarf(unsigned long)+0x34
      #

      --------------- T H R E A D ---------------

      Current thread (0x00007f4d2c032000): JavaThread "main" [_thread_in_native, id=13813, stack(0x00007f4d36751000,0x00007f4d36852000)]

      Stack: [0x00007f4d36751000,0x00007f4d36852000], sp=0x00007f4d368501d0, free space=1020k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      C [libsaproc.so+0x48d4] DwarfParser::process_dwarf(unsigned long)+0x34
      C [libsaproc.so+0x3138] Java_sun_jvm_hotspot_debugger_linux_amd64_DwarfParser_processDwarf0+0x28
      j sun.jvm.hotspot.debugger.linux.amd64.DwarfParser.processDwarf0(J)V+0 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.debugger.linux.amd64.DwarfParser.processDwarf(Lsun/jvm/hotspot/debugger/Address;)V+7 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.debugger.linux.amd64.LinuxAMD64CFrame.getNextDwarf(Lsun/jvm/hotspot/debugger/Address;)Lsun/jvm/hotspot/debugger/linux/amd64/DwarfParser;+63 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.debugger.linux.amd64.LinuxAMD64CFrame.sender(Lsun/jvm/hotspot/debugger/ThreadProxy;)Lsun/jvm/hotspot/debugger/cdbg/CFrame;+32 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.tools.PStack.run(Ljava/io/PrintStream;Lsun/jvm/hotspot/debugger/Debugger;)V+673 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.CommandProcessor$29.doit(Lsun/jvm/hotspot/CommandProcessor$Tokens;)V+54 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.CommandProcessor.executeCommand(Lsun/jvm/hotspot/CommandProcessor$Tokens;)V+60 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.CommandProcessor.executeCommand(Ljava/lang/String;Z)V+822 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.CommandProcessor.run(Z)V+51 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.CLHSDB.run()V+125 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.CLHSDB.main([Ljava/lang/String;)V+8 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.SALauncher.runCLHSDB([Ljava/lang/String;)V+30 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.SALauncher$$Lambda$1.accept(Ljava/lang/Object;)V+4 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.SALauncher.main([Ljava/lang/String;)V+158 jdk.hotspot.agent@15-ea
      v ~StubRoutines::call_stub
      V [libjvm.so+0xc2268c] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x6ac
      V [libjvm.so+0xd31770] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, Thread*) [clone .isra.140] [clone .constprop.263]+0x370
      V [libjvm.so+0xd36002] jni_CallStaticVoidMethod+0x222
      C [libjli.so+0x4bed] JavaMain+0xbcd
      C [libjli.so+0x80a9] ThreadJavaMain+0x9

      Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
      j sun.jvm.hotspot.debugger.linux.amd64.DwarfParser.processDwarf0(J)V+0 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.debugger.linux.amd64.DwarfParser.processDwarf(Lsun/jvm/hotspot/debugger/Address;)V+7 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.debugger.linux.amd64.LinuxAMD64CFrame.getNextDwarf(Lsun/jvm/hotspot/debugger/Address;)Lsun/jvm/hotspot/debugger/linux/amd64/DwarfParser;+63 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.debugger.linux.amd64.LinuxAMD64CFrame.sender(Lsun/jvm/hotspot/debugger/ThreadProxy;)Lsun/jvm/hotspot/debugger/cdbg/CFrame;+32 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.tools.PStack.run(Ljava/io/PrintStream;Lsun/jvm/hotspot/debugger/Debugger;)V+673 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.CommandProcessor$29.doit(Lsun/jvm/hotspot/CommandProcessor$Tokens;)V+54 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.CommandProcessor.executeCommand(Lsun/jvm/hotspot/CommandProcessor$Tokens;)V+60 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.CommandProcessor.executeCommand(Ljava/lang/String;Z)V+822 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.CommandProcessor.run(Z)V+51 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.CLHSDB.run()V+125 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.CLHSDB.main([Ljava/lang/String;)V+8 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.SALauncher.runCLHSDB([Ljava/lang/String;)V+30 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.SALauncher$$Lambda$1.accept(Ljava/lang/Object;)V+4 jdk.hotspot.agent@15-ea
      j sun.jvm.hotspot.SALauncher.main([Ljava/lang/String;)V+158 jdk.hotspot.agent@15-ea
      v ~StubRoutines::call_stub

      siginfo: si_signo: 11 (SIGSEGV), si_code: 1 (SEGV_MAPERR), si_addr: 0x00007f4d53d18900

      Register to memory mapping:

      RAX=0x00007fb2c2b7e1f7 is an unknown value
      RBX=0x00007f4d2c2dbe80 points into unknown readable memory: 60 95 25 a8 4c 7f 00 00
      RCX=0x00007f4ca8259560 points into unknown readable memory: 2f 75 73 72 2f 6c 69 62
      RDX=0x00007f4ca825dd61 points into unknown readable memory: 00 00 00 00 00 00 00
      RSP=0x00007f4d368501d0 is pointing into the stack for thread: 0x00007f4d2c032000
      RBP=0x00007f4d36850200 is pointing into the stack for thread: 0x00007f4d2c032000
      RSI=0x0000000000000004 is an unknown value
      RDI=0x00007f4d2c2dbe80 points into unknown readable memory: 60 95 25 a8 4c 7f 00 00
      R8 =0x0000000001691230 points into unknown readable memory: 02 00 00 00 00 00 00 00
      R9 =0x00007f4ca825dd55 points into unknown readable memory: ab ab ab
      R10=0x00000000abababab is an unknown value
      R11=0x00000000ffffffff is an unknown value
      R12=0x00007f4d53d18900 is an unknown value
      R13=0x00007fb2067f2ca9 is an unknown value
      R14=0x00007fb2b20c364c is an unknown value
      R15=0x00007f4d2c032000 is a thread


      Registers:
      RAX=0x00007fb2c2b7e1f7, RBX=0x00007f4d2c2dbe80, RCX=0x00007f4ca8259560, RDX=0x00007f4ca825dd61
      RSP=0x00007f4d368501d0, RBP=0x00007f4d36850200, RSI=0x0000000000000004, RDI=0x00007f4d2c2dbe80
      R8 =0x0000000001691230, R9 =0x00007f4ca825dd55, R10=0x00000000abababab, R11=0x00000000ffffffff
      R12=0x00007f4d53d18900, R13=0x00007fb2067f2ca9, R14=0x00007fb2b20c364c, R15=0x00007f4d2c032000
      RIP=0x00007f4cf04938d4, EFLAGS=0x0000000000010206, CSGSFS=0x002b000000000033, ERR=0x0000000000000004
        TRAPNO=0x000000000000000e

      Top of Stack: (sp=0x00007f4d368501d0)
      0x00007f4d368501d0: 00007f4d368501d0 00007f4d2c032378
      0x00007f4d368501e0: 00007f4d2c032378 00007fb2067f2ca9
      0x00007f4d368501f0: 00007f4cf14e9110 00007f4d368502c0
      0x00007f4d36850200: 00007f4d36850220 00007f4cf0492138

      Instructions: (pc=0x00007f4cf04938d4)
      0x00007f4cf04937d4: 53 08 0f b6 40 01 89 43 18 4d 85 f6 75 61 48 c7
      0x00007f4cf04937e4: 43 28 00 00 00 00 4c 89 e1 31 f6 48 89 df 48 b8
      0x00007f4cf04937f4: 07 00 00 00 10 00 00 00 c6 43 3c 00 48 c7 c2 ff
      0x00007f4cf0493804: ff ff ff 48 89 43 14 48 c7 43 30 00 00 00 00 c7
      0x00007f4cf0493814: 43 38 00 00 00 00 e8 21 fb ff ff 4c 89 6b 08 b8
      0x00007f4cf0493824: 01 00 00 00 48 83 c4 18 5b 41 5c 41 5d 41 5e 41
      0x00007f4cf0493834: 5f 5d c3 66 0f 1f 84 00 00 00 00 00 48 89 c2 48
      0x00007f4cf0493844: 8d 42 01 48 89 43 08 80 78 ff 00 78 ef 48 8d 42
      0x00007f4cf0493854: 02 48 89 43 08 0f b6 42 01 88 43 10 eb 80 66 66
      0x00007f4cf0493864: 2e 0f 1f 84 00 00 00 00 00 0f 1f 00 0f b6 47 10
      0x00007f4cf0493874: 83 e0 07 3c 02 74 0a 76 1b 3c 03 74 04 3c 04 75
      0x00007f4cf0493884: 17 48 8b 57 08 8b 02 48 83 c2 04 48 89 57 08 c3
      0x00007f4cf0493894: 0f 1f 40 00 84 c0 74 e9 31 c0 c3 90 55 41 bb ff
      0x00007f4cf04938a4: ff ff ff 48 89 e5 41 56 41 55 49 89 f5 41 54 53
      0x00007f4cf04938b4: 48 89 fb 48 83 ec 10 48 8b 07 4c 8b a0 28 11 00
      0x00007f4cf04938c4: 00 eb 0d 66 0f 1f 84 00 00 00 00 00 4c 89 63 08
      0x00007f4cf04938d4: 41 8b 04 24 49 8d 54 24 04 48 89 53 08 4c 39 d8
      0x00007f4cf04938e4: 75 0d 49 8b 44 24 04 49 83 c4 0c 4c 89 63 08 48
      0x00007f4cf04938f4: 85 c0 0f 84 b4 00 00 00 4c 8b 4b 08 45 8b 11 4d
      0x00007f4cf0493904: 8d 24 01 49 8d 41 04 48 89 43 08 45 85 d2 74 bc
      0x00007f4cf0493914: 48 89 df e8 64 f9 ff ff 48 8b 13 41 89 c6 4c 03
      0x00007f4cf0493924: b2 18 11 00 00 e8 42 ff ff ff 89 c0 4c 01 f0 4c
      0x00007f4cf0493934: 39 e8 76 98 4d 39 ee 77 93 44 89 d2 4c 89 ce e8
      0x00007f4cf0493944: 68 fd ff ff 84 c0 74 64 48 8b 4b 08 45 31 c0 48
      0x00007f4cf0493954: 8d 51 01 31 c9 0f 1f 80 00 00 00 00 48 89 53 08
      0x00007f4cf0493964: 0f b6 7a ff 49 89 d1 48 83 c2 01 48 89 fe 83 e6
      0x00007f4cf0493974: 7f 48 d3 e6 83 c1 07 49 09 f0 40 84 ff 78 dd 4d
      0x00007f4cf0493984: 01 c8 4c 89 e1 4c 89 ea 4c 89 f6 4c 89 43 08 48
      0x00007f4cf0493994: 89 df 88 45 df e8 a2 f9 ff ff 0f b6 45 df 48 83
      0x00007f4cf04939a4: c4 10 5b 41 5c 41 5d 41 5e 5d c3 90 48 83 c4 10
      0x00007f4cf04939b4: 31 c0 5b 41 5c 41 5d 41 5e 5d c3 90 55 48 89 e5
      0x00007f4cf04939c4: 41 54 53 48 81 ec d0 00 00 00 48 89 b5 48 ff ff

        There are no Sub-Tasks for this issue.

            Assignee:
            Yasumasa Suenaga
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: