8240956: SEGV in DwarfParser::process_dwarf after JDK-8234624

Reviewed-by: sspitsyn, kevinw